Show organization name in mock login list

--- a/app/templates/mock-login.hbs
+++ b/app/templates/mock-login.hbs
@@ -30,8 +30,9 @@
                   <strong>
                     {{account.user.firstName}}
                     {{account.user.familyName}}
-                    -&nbsp;
                   </strong>
+                  <hr />
+                  {{account.user.group.name}}
                 </AuButton>
               </div>
             </li>
