--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,7 +12,7 @@
   <AppHeader />
   <main id="main" class="au-c-main-container">
     <div
-      class="au-c-main-container__content au-c-main-container__content--scroll"
+      class="au-c-main-container__content au-c-main-container__content--scroll au-u-flex au-u-flex--column"
       id="content"
       tabindex="-1"
     >
