--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -62,7 +62,7 @@
               </Item>
 
               <Item>
-                <:label>Contact Email</:label>
+                <:label>Contact</:label>
                 <:content>
                   {{contact-email this.metadata.publisher.primarySite.contacts}}
                 </:content>
@@ -160,7 +160,7 @@
             </Item>
 
             <Item>
-              <:label>Contact Email</:label>
+              <:label>Contact</:label>
               <:content>
                 {{contact-email this.metadata.publisher.primarySite.contacts}}
               </:content>
