Add mock download action

--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -307,13 +307,22 @@
       <p>Het geselecteerde BPMN-bestand is beschikbaar in verschillende
         formaten:</p>
       <AuButtonGroup class="au-u-flex au-u-flex--around">
-        <AuButton>Origineel
+        <AuButton {{on "click" (fn this.downloadFile "text/xml")}}>Origineel
           <span class="au-u-para-tiny au-u-regular">(.bpmn)</span></AuButton>
-        <AuButton @skin="secondary">Afbeelding
+        <AuButton
+          @skin="secondary"
+          {{on "click" (fn this.downloadFile "image/png")}}
+        >Afbeelding
           <span class="au-u-para-tiny au-u-regular">(.png)</span></AuButton>
-        <AuButton @skin="secondary">Vectorafbeelding
+        <AuButton
+          @skin="secondary"
+          {{on "click" (fn this.downloadFile "image/svg+xml")}}
+        >Vectorafbeelding
           <span class="au-u-para-tiny au-u-regular">(.svg)</span></AuButton>
-        <AuButton @skin="secondary">PDF
+        <AuButton
+          @skin="secondary"
+          {{on "click" (fn this.downloadFile "application/pdf")}}
+        >PDF
           <span class="au-u-para-tiny au-u-regular">(.pdf)</span></AuButton>
       </AuButtonGroup>
     </div>
