--- a/app/components/app-header.hbs
+++ b/app/components/app-header.hbs
@@ -12,9 +12,9 @@
     >
       {{! disabled for now as there seems to be an issue with the post logout redirect uri }}
       {{! once it's fixed on acm idm side, we should uncomment this }}
-      {{! <AuLink @route="auth.switch" @icon="switch" role="menuitem"> }}
-      {{!   Wissel van bestuurseenheid }}
-      {{! </AuLink> }}
+      <AuLink @route="auth.switch" @icon="switch" role="menuitem">
+        Wissel van bestuurseenheid
+      </AuLink>
       <AuLink @route="auth.logout" @icon="logout" role="menuitem">
         Afmelden
       </AuLink>
