--- a/app/templates/bpmn-files/bpmn-file/index.hbs
+++ b/app/templates/bpmn-files/bpmn-file/index.hbs
@@ -19,15 +19,9 @@
             {{on "click" this.openReplaceModal}}
           >Vervang BPMN-bestand</AuButton>
         {{/if}}
-        <a
-          class="au-c-button au-c-button--primary"
-          href="{{bpmn-download-url this.metadata.id this.metadata.name}}"
-          download="{{this.metadata.name}}"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
+        <AuButton {{on "click" this.openDownloadModal}}>
           Download BPMN-bestand
-        </a>
+        </AuButton>
       </AuButtonGroup>
     </:action>
   </PageHeader>
@@ -298,6 +292,42 @@
       <AuButton
         @skin="naked"
         {{on "click" this.closeReplaceModal}}
+      >Annuleer</AuButton>
+    </AuButtonGroup>
+  </:footer>
+</AuModal>
+
+<AuModal
+  @modalOpen={{this.downloadModalOpened}}
+  @closeModal={{this.closeDownloadModal}}
+>
+  <:title>Download BPMN-bestand</:title>
+  <:body>
+    <div class="au-o-flow">
+      <p>Het geselecteerde BPMN-bestand is beschikbaar in verschillende
+        formaten:</p>
+      <AuButtonGroup class="au-u-flex au-u-flex--around">
+        {{#each this.downloadTypes as |downloadType|}}
+          <AuButton
+            @skin={{if
+              (eq downloadType.extension "bpmn")
+              "primary"
+              "secondary"
+            }}
+            {{on "click" (fn this.downloadFile downloadType)}}
+          >{{capitalize-first downloadType.label}}
+            <span
+              class="au-u-para-tiny au-u-regular"
+            >(.{{downloadType.extension}})</span></AuButton>
+        {{/each}}
+      </AuButtonGroup>
+    </div>
+  </:body>
+  <:footer>
+    <AuButtonGroup class="au-u-flex--end">
+      <AuButton
+        @skin="naked"
+        {{on "click" this.closeDownloadModal}}
       >Annuleer</AuButton>
     </AuButtonGroup>
   </:footer>
