--- a/app/templates/bpmn-elements.hbs
+++ b/app/templates/bpmn-elements.hbs
@@ -1,5 +1,5 @@
 {{page-title "Processtappen"}}
-{{breadcrumb "Processtappen" route="bpmn-elements"}}
+{{breadcrumb "Processtappen" route="process-steps"}}
 
 <div class="au-c-body-container au-c-body-container--scroll">
   <NavigationBar />
