--- a/app/templates/process-steps/index.hbs
+++ b/app/templates/process-steps/index.hbs
@@ -90,7 +90,7 @@
               <LinkTo
                 class="au-c-link"
                 @model={{element.process.derivation.id}}
-                @route="bpmn-files.bpmn-file"
+                @route="processes.process"
               >
                 {{element.process.derivation.name}}
               </LinkTo>
