--- a/app/templates/bpmn-uploads.hbs
+++ b/app/templates/bpmn-uploads.hbs
@@ -1,5 +1,5 @@
 {{page-title "Gedeelde processen"}}
-{{breadcrumb "Gedeelde processen" route="bpmn-uploads"}}
+{{breadcrumb "Gedeelde processen" route="shared-processes"}}
 
 <div class="au-c-body-container au-c-body-container--scroll">
   <NavigationBar />
