--- a/app/templates/shared-processes/index.hbs
+++ b/app/templates/shared-processes/index.hbs
@@ -86,7 +86,7 @@
               <LinkTo
                 class="au-c-link"
                 @model={{file.id}}
-                @route="bpmn-files.bpmn-file"
+                @route="processes.process"
               >
                 {{file.name}}
               </LinkTo>
