--- a/app/components/process-step-select-by-name.hbs
+++ b/app/components/process-step-select-by-name.hbs
@@ -6,7 +6,7 @@
     @noMatchesMessage="Geen resultaten"
     @searchMessage="Typ om te zoeken"
     @searchField="name"
-    @search={{perform this.loadBpmnElementsTask}}
+    @search={{perform this.loadProcessStepsTask}}
     @selected={{@selected}}
     @onChange={{@onChange}}
     @triggerId={{@id}}
