--- a/app/components/process-step-select-by-type.hbs
+++ b/app/components/process-step-select-by-type.hbs
@@ -1,17 +1,15 @@
 <div class={{if @error "ember-power-select--error"}} ...attributes>
   <PowerSelect
+    {{did-insert this.loadProcessStepTypesTask.perform}}
     @allowClear={{true}}
-    @searchEnabled={{true}}
     @loadingMessage="Aan het laden..."
     @noMatchesMessage="Geen resultaten"
-    @searchMessage="Typ om te zoeken"
-    @searchField="name"
-    @search={{perform this.loadBpmnFilesTask}}
-    @selected={{@selected}}
-    @onChange={{@onChange}}
+    @options={{this.types}}
+    @selected={{this.type}}
+    @onChange={{this.setType}}
     @triggerId={{@id}}
-    as |name|
+    as |type|
   >
-    {{name}}
+    {{capitalize-first type.name}}
   </PowerSelect>
 </div>
