--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -15,7 +15,7 @@
         >
           <div>
             <AuLabel for="filter-name">Zoek op naam of beschrijving</AuLabel>
-            <BpmnFileSelectByName
+            <ProcessSelectByTitle
               @id="filter-name"
               @selected={{this.name}}
               @onChange={{this.setName}}
@@ -47,7 +47,7 @@
     </PageHeader>
 
     <AuDataTable
-      @content={{this.bpmnFiles}}
+      @content={{this.processes}}
       @isLoading={{this.isLoading}}
       @page={{this.page}}
       @size={{this.size}}
