--- a/app/templates/process-steps/index.hbs
+++ b/app/templates/process-steps/index.hbs
@@ -89,10 +89,10 @@
             <td>
               <LinkTo
                 class="au-c-link"
-                @model={{element.process.derivation.id}}
+                @model={{element.process.bpmnFile.id}}
                 @route="processes.process"
               >
-                {{element.process.derivation.name}}
+                {{element.process.bpmnFile.name}}
               </LinkTo>
             </td>
           </c.body>
