Download bpmn file

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -285,7 +285,7 @@
               "primary"
               "secondary"
             }}
-            {{on "click" (fn this.downloadFile downloadType)}}
+            {{on "click" (fn this.downloadBpmnFile downloadType)}}
           >{{capitalize-first downloadType.label}}
             <span
               class="au-u-para-tiny au-u-regular"
