Replace bpmn file

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -254,6 +254,7 @@
       @accept=".bpmn,.xml"
       @title="Bestand selecteren"
       @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
+      @updateProcess={{this.updateProcess}}
       @extractBpmnElements={{this.extractBpmnElements}}
       @onFinishUpload={{this.fileUploaded}}
     />
