--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -1,7 +1,7 @@
 {{#if this.edit}}
   <PageHeader>
     <:title>
-      Wijzig metadata
+      Wijzig proces
     </:title>
     <:action>
     </:action>
@@ -33,7 +33,7 @@
       <DataCard>
         <:header></:header>
         <:title>
-          Metadata
+          Details
         </:title>
         <:card as |Card|>
           <Card.Columns>
@@ -120,7 +120,7 @@
         {{/if}}
       </:header>
       <:title>
-        Metadata
+        Details
       </:title>
       <:card as |Card|>
         <Card.Columns>
